HYD-2049: General whitespace & ordering fixes.
- Increased vertical button spacing on main pages.
- left aligned tooltip text.
- Moved volume help info into a section title tooltip.
- Renamed table columns with name to be more specific.
- Reversed ordering in MGT tab so New MGT comes before MGT Configuration.

--- a/chroma-manager/chroma_ui/static/css/base.css
+++ b/chroma-manager/chroma_ui/static/css/base.css
@@ -169,9 +169,9 @@ pre
 	background-color:#cc5555;
 }
 
-.buttonspacer{
+.buttonspacer {
 	margin-top:5px;
-	margin-bottom:5px;
+	margin-bottom:20px;
 }
 
 .magni{
